# wealth-tracker

./: README.md  eslint.config.js  package-lock.json  package.json  vite.config.js
src/: App.jsx  constants.js  db.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Hero.jsx  charts.jsx  common.jsx  forms.jsx
src/data/: defaultState.js
src/utils/: debt.js  format.js  ira.js  planning.js  portfolio.js  projections.js
src/views/: DashboardView.jsx  DebtView.jsx  EtfView.jsx  PlanningView.jsx  ProjectionView.jsx  RealWealthView.jsx  SettingsView.jsx  SnapshotsView.jsx  TransactionsView.jsx  VisualsView.jsx
